# Temporal-Logic-Video-Dataset

./: .gitignore  .ruff.toml  README.md  example.py  pyproject.toml
.github/workflows/: ruff.yml
run_scripts/: run_2_synthetic_tlv_until_long_horizon.py  run_3_real_tlv.py  run_real_tlv.py  run_synthetic_tlv_coco.py  run_synthetic_tlv_coco_until_long_horizon.py  run_synthetic_tlv_imagenet.py  run_synthetic_tlv_imagenet_until_long_horizon.py  run_synthetic_tlv_imagenet_until_long_horizonpy
tlv_dataset/: __init__.py
tlv_dataset/common/: omegaconf.py  utility.py
tlv_dataset/config/: waymo_image_loader.yaml
tlv_dataset/data/: __init__.py  tlv_dataset.py  tlv_raw_image.py
tlv_dataset/generator/: _base.py  real_tlv_generator.py  synthetic_tlv_generator.py
tlv_dataset/label_mapper/: mapper_utils.py
tlv_dataset/label_mapper/metadata/: imagenet_to_coco.py  nuscenes_to_coco.py  waymo_to_coco.py
tlv_dataset/loader/: _base.py  cifar.py  coco.py  imagenet.py  nuscenes.py  waymo.py
