[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tlv_data"
version = "1.0.0"
authors = [
  { name="Minkyu Choi", email="minkyu.choi@utexas.edu" },
]
description = "Temporal Logic Video (TLV) Dataset"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.22.0",
    "pandas"
]

[project.urls]
"Homepage" = "https://github.com/UTAustin-SwarmLab/Python-Project-Template"
"Bug Tracker" = "https://github.com/UTAustin-SwarmLab/Python-Project-Template/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]

[tool.black]
line-length = 80

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

ignore = ["ANN101", "ANN102"]

extend-exclude = [".venv", "venv", "vscode"]

[tool.ruff.pydocstyle]
convention = "google"
