[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["tlv_dataset"]  # package names should match these glob patterns (["*"] by default)
exclude = [""]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "tlv_dataset"
version = "1.0.0"
authors = [
  { name="Minkyu Choi", email="minkyu.choi@utexas.edu" },
]
description = "Temporal Logic Video (TLV) Dataset"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.22.0",
    "opencv-python",
    "torch==2.0.0",
    "Pillow",
    "matplotlib",
    "pycocotools==2.0.7",
    "nuscenes-devkit",
    "dask",
    "waymo-open-dataset-tf-2-11-0==1.6.0",
    "omegaconf"

]

[project.urls]
"Homepage" = "https://github.com/UTAustin-SwarmLab/temporal-logic-vedio-dataset"
"Bug Tracker" = "https://github.com/UTAustin-SwarmLab/temporal-logic-vedio-dataset/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy"]
test = ["pytest", "pytest-cov", "pytest-mock"]